--- a/index.html
+++ b/index.html
@@ -1,1 +1,209 @@
-Hello World
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Curriculo</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+        integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="container">
+        <div class="left_Side">
+            <div class="profileText">
+                <div class="imgBx">
+                    <img src="img.jpeg">
+                </div>
+                <h2>Lucas Costa<br><span>Desenvolvedor de Sistema</span></h2>
+            </div>
+
+            <div class="contactInfo">
+                <h3 class="title">Contato</h3>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa fa-whatsapp" aria-hidden="true"></i>
+                        </span>
+                        <span class="text">+55 21 96422-8902</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-envelope" aria-hidden="true"></i>
+                        </span>
+                        <span class="text">lucasrangelcosta@gmail.com</span>
+                    </li>
+                    <li>
+                        <span class="icon">
+                            <a href="https://www.linkedin.com/in/lucasr-costa/" target="_blank" class="linkedin">
+                                <i class="fa fa-linkedin" aria-hidden="true"></i>
+                            </a>
+                        </span>
+                        <span class="text">
+                            <a href="https://www.linkedin.com/in/lucasr-costa/" target="_blank"
+                                class="linkedin">Linkedin</a>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="icon">
+                            <a href="https://github.com/lucasrangelcosta" target="_blank" class="github">
+                                <i class="fa fa-github" aria-hidden="true"></i>
+                            </a>
+                        </span>
+                        <span class="text">
+                            <a href="https://github.com/lucasrangelcosta" target="_blank" class="github">GitHub</a>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i>
+                        </span>
+                        <span class="text">Mesquita, Rio de Janeiro, Brasil</span>
+                    </li>
+
+                </ul>
+            </div>
+
+            <div class="contactInfo education">
+                <h3 class="title">Educação</h3>
+                <ul>
+                    <li>
+                        <h5>2014 - 2017</h5>
+                        <h4>Ensino Medio</h4>
+                        <h4>Colégio Curso Equipe Grau</h4>
+                    </li>
+                </ul>
+            </div>
+            <div class="contactInfo language">
+                <h3 class="title">Idiomas</h3>
+                <ul>
+                    <li>
+                        <span class="text">Inglês</span>
+                        <span class="percent">
+                            <div style="width:70%;"></div>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="text">Espanhol</span>
+                        <span class="percent">
+                            <div style="width:45%;"></div>
+                        </span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="right_Side">
+            <div class="about">
+                <h2 class="title2">Sobre Mim</h2>
+                <p>Sou um profissional altamente proativo e dedicado, comprometido em alcançar excelência em
+                    todas as áreas da minha vida. <br><br>Minha capacidade de aprendizado rápido e habilidade natural
+                    para
+                    estabelecer relações interpessoais me permitem contribuir significativamente para o sucesso da
+                    equipe e da organização. Estou constantemente empenhado em melhorar tanto pessoal quanto
+                    profissionalmente, buscando oportunidades para crescer e evoluir.</p>
+            </div>
+            <div class="about">
+                <h2 class="title2">Experiência Profissional</h2>
+                <div class="box">
+                    <div class="year_company">
+                        <h5>07/2024 - Presente</h5>
+                        <h5>Crosssystem Tecnologia da Informação </h5>
+                    </div>
+                    <div class="text">
+                        <h4>Desenvolvedor Junior (Em Treinamento)</h4>
+                        <p>Desenvolvedor Front-End com foco em React Native e Next.js, especializado na criação de
+                            interfaces responsivas e de alta qualidade.
+                            Transformo protótipos em componentes funcionais e colaboro com equipes de design para
+                            garantir layouts alinhados às tendências do mercado.</p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="year_company">
+                        <h5>Periodo <br>Extra-Natal</h5>
+                        <h5>Loja Fisico e Forma</h5>
+                    </div>
+                    <div class="text">
+                        <h4>Vendedor</h4>
+                        <p>Trabalhei como vendedor, auxiliando clientes e organizando a loja e o estoque para manter um
+                            ambiente de compras eficiente e agradável.</p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="year_company">
+                        <h5>01/2022 - 06/2023</h5>
+                        <h5>Imobiliária <br>Approva Fácil</h5>
+                    </div>
+                    <div class="text">
+                        <h4>Corretor Imobiliário</h4>
+                        <p>Auxiliei clientes na seleção de imóveis, oferecendo análises de mercado e conduzindo
+                            negociações.
+                            Assegurei a satisfação dos clientes e o cumprimento das metas, mantendo um serviço
+                            personalizado e acompanhamento contínuo.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="about skills">
+                <h2 class="title2">Habilidades profissional</h2>
+                <div class="box">
+                    <h4>HTML</h4>
+                    <div class="percent">
+                        <div style="width: 95%;"></div>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <h4>CSS</h4>
+                    <div class="percent">
+                        <div style="width: 85%;"></div>
+                    </div>
+                </div>
+
+
+                <div class="box">
+                    <h4>JavaScript</h4>
+                    <div class="percent">
+                        <div style="width: 80%;"></div>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <h4>ReactNative</h4>
+                    <div class="percent">
+                        <div style="width: 65%;"></div>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <h4>Next.JS</h4>
+                    <div class="percent">
+                        <div style="width: 65%;"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="about interest">
+                <h2 class="title2">Interesses</h2>
+                <ul>
+                    <li>
+                        <i class="fa fa-futbol-o" aria-hidden="true"></i> Futebol
+                    </li>
+                    <li>
+                        <i class="fa fa-cutlery" aria-hidden="true"></i> Cozinhar
+                    </li>
+                    <li>
+                        <i class="fa fa-flag-checkered" aria-hidden="true"></i> Formula 1
+                    </li>
+                    <li>
+                        <i class="fa fa-television" aria-hidden="true"></i> Series
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
