--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
                         <h4>Ensino Medio</h4>
                         <h4>Colégio Curso Equipe Grau</h4>
                     </li>
+                    <li>
+                        <h5>2025 - 2027 (Previsão de conclusão)</h5>
+                        <h4>Analise e Desenvolvimento de Sistemas</h4>
+                        <h4>Faculdade Anhanguera</h4>
+                    </li>
                 </ul>
             </div>
             <div class="contactInfo language">
@@ -107,7 +112,7 @@
                 <h2 class="title2">Experiência Profissional</h2>
                 <div class="box">
                     <div class="year_company">
-                        <h5>07/2024 - Presente</h5>
+                        <h5>07/2024 - 11/2024</h5>
                         <h5>Crosssystem Tecnologia da Informação </h5>
                     </div>
                     <div class="text">
