--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
                 <div class="imgBx">
                     <img src="img.jpeg">
                 </div>
-                <h2>Lucas Costa<br><span>Desenvolvedor de Sistema</span></h2>
+                <h2>Lucas Rangel Costa<br><span>Desenvolvedor de Sistema</span></h2>
             </div>
 
             <div class="contactInfo">
                 <h3 class="title">Contato</h3>
                 <ul>
+                    <li>
+                        <span class="icon"><i class="fa fa-calendar" aria-hidden="true"></i>
+                        </span>
+                        <span class="text">20/08/1999</span>
+                    </li>
                     <li>
                         <span class="icon"><i class="fa fa-whatsapp" aria-hidden="true"></i>
                         </span>
@@ -58,7 +63,7 @@
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i>
                         </span>
-                        <span class="text">Mesquita, Rio de Janeiro, Brasil</span>
+                        <span class="text">Avenida das Oliveias 164, Ap. 102, Rocha Sobrinho, Mesquita, RJ</span>
                     </li>
 
                 </ul>
